--- a/index.html
+++ b/index.html
@@ -58,9 +58,10 @@
 
 <script>
 if ("serviceWorker" in navigator) {
-    navigator.serviceWorker.register("service-worker.js");
+    navigator.serviceWorker.register("./service-worker.js");
 }
 </script>
 
 </body>
 </html>
+
